--- a/logica-de-programacao-l-javascript/atividade-principal-2/assets/css/styles.css
+++ b/logica-de-programacao-l-javascript/atividade-principal-2/assets/css/styles.css
@@ -9,7 +9,7 @@ body{
     width: 100vw;
     height: 90vw;
     margin-top: 20px;
-    background-color: bisque;
+    background-color: beige;
     font-family: 'Ubuntu', sans-serif;
 
 
@@ -30,7 +30,7 @@ body{
 }
 
 #imagem{
-    background-image: url('../image/forca.png');
+    background-image: url('../images/forca.png');
     width: 234px;
     height: 272px;
     background-repeat: no-repeat;
@@ -70,16 +70,16 @@ body{
 
 .teclas button {
     
-    width: 34px;
-    height: 34px;
+    width: 40px;
+    height: 40px;
     margin: 2px;
     margin-top: 5px;
     cursor: pointer;
-    box-shadow: 0px 2px 8px dimgray;
+    box-shadow: 0px 1px 2px dimgray;
     border: 1px solid dimgray;
     border-radius: 5px;
-    color: fuchsia;
-    background-color: blue;
+    color: grey;
+    background-color: white;
     font-size: 25px;
     font-weight: bold;
     
@@ -97,15 +97,15 @@ body{
 
 #btnAcao{
     width: 70px;
-    height: 24px;
+    height: 60px;
     margin: 2px;
     margin-top: 5px;
     cursor: pointer;
-    box-shadow: 0px 2px 8px dimgray;
+    box-shadow: 0px 1px 2px dimgray;
     border: 1px solid dimgray;
     border-radius: 5px;
-    color: red;
-    background-color: aqua;
+    color: grey;
+    background-color: greenyellow;
     font-size: 'Ubuntu', sans-serif;
     font-weight: 900;
 }
