--- a/logica-de-programacao-l-javascript/atividade-principal-2/assets/css/styles.css
+++ b/logica-de-programacao-l-javascript/atividade-principal-2/assets/css/styles.css
@@ -5,71 +5,92 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     width: 100vw;
     height: 90vw;
     margin-top: 20px;
     background-color: beige;
     font-family: 'Ubuntu', sans-serif;
-
-
+    display: flex;
+    flex-direction: column;
 }
 
-.container{
+.h1 {
+    text-align: center;
+    margin: 40px;
+} 
+
+.container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-direction: row;   
+}
+
+.forca {
+    order: 2;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    flex-direction: column;
-    
-    
+    flex-direction: column;   
 }
 
-#titulo{
+.categorias {
+    order: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;   
+}
+
+.placar {
+    order: 3;
+    display: flex-start;
+    flex-direction: row;  
+}
+
+#titulo {
     padding-top: 25px;
 }
 
-#imagem{
+#imagem {
     background-image: url('../images/forca.png');
     width: 234px;
     height: 272px;
     background-repeat: no-repeat;
-    margin-top: 25px;
-    
+    margin-top: 25px;  
 }
 
-#palavraSecreta{
+#palavraSecreta {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     font-size: 1em;
-    margin-top: 30px;
-    
+    margin-top: 30px;  
 }
 
 .letras {
-    width: 16px;
+    width: 40px;
     text-align: center;
     border-bottom: 2px solid rgb(6, 22, 1);
     color: #ffff;
-    margin-left: 2px;
-    margin-right: 2px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
-.teclado{
+.teclado {
     margin-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
     flex-direction: column;
-   
-    
+    align-self: center;
 }
 
-.teclas button {
-    
+.teclas button { 
     width: 40px;
     height: 40px;
     margin: 2px;
@@ -82,20 +103,17 @@ body{
     background-color: white;
     font-size: 25px;
     font-weight: bold;
-    
-    
-    
 }
 
-.teclas button:disabled{
+.teclas button:disabled {
     cursor: not-allowed;
 }
 
-.teclas button:hover{
+.teclas button:hover {
     transform: scale(1.3);
 }
 
-#btnAcao{
+#btnAcao {
     width: 70px;
     height: 60px;
     margin: 2px;
