--- a/logica-de-programacao-l-javascript/atividade-principal-2/assets/css/styles.css
+++ b/logica-de-programacao-l-javascript/atividade-principal-2/assets/css/styles.css
@@ -6,38 +6,33 @@
 }
 
 body {
-    width: 100vw;
+    max-width: 100%;
     height: 90vw;
-    margin-top: 20px;
+    margin: 0 auto;
     background-color: beige;
     font-family: 'Ubuntu', sans-serif;
     display: flex;
+    flex-direction: row;
+    margin: 20px;
+}
+
+.div1 {
+    width: 75%;
+    background-color: beige;
+    display: flex;
+    align-items: center;
     flex-direction: column;
 }
 
-.h1 {
-    text-align: center;
-    margin: 40px;
-} 
-
-.container {
+.div2 {
+    width: 25%;
+    background-color: beige;
     display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    flex-direction: row;   
-}
-
-.forca {
-    order: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-direction: column;   
+    flex-direction: column;
+    margin-top: 100px;
 }
 
 .categorias {
-    order: 1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,9 +41,9 @@ body {
 }
 
 .placar {
-    order: 3;
-    display: flex-start;
-    flex-direction: row;  
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
 }
 
 #titulo {
@@ -60,7 +55,8 @@ body {
     width: 234px;
     height: 272px;
     background-repeat: no-repeat;
-    margin-top: 25px;  
+    margin-top: 25px;
+    justify-content: center;
 }
 
 #palavraSecreta {
@@ -69,7 +65,7 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 1em;
-    margin-top: 30px;  
+    margin-top: 70px;  
 }
 
 .letras {
@@ -114,8 +110,8 @@ body {
 }
 
 #btnAcao {
-    width: 70px;
-    height: 60px;
+    width: 150px;
+    height: 40px;
     margin: 2px;
     margin-top: 5px;
     cursor: pointer;
