--- a/logica-de-programacao-l-javascript/atividade-principal-2/css/styles.css
+++ b/logica-de-programacao-l-javascript/atividade-principal-2/css/styles.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-body {
+body{
     width: 100vw;
     height: 90vw;
     margin: 0 auto;
@@ -14,6 +14,7 @@ body {
     display: flex;
     flex-direction: row;
     margin: 2vw;
+
 }
 
 .div1 {
@@ -46,12 +47,16 @@ body {
     align-items: center; 
 }
 
-#titulo {
-    padding-top: 25px;
+#titulo, #tituloPlacar, #tituloCat
+{
+    padding: 25px;
+    
 }
 
-#imagem {
-    background-image: url('../images/forca.png');
+
+
+#imagem{
+    background-image: url('../assets/forca.png');
     width: 234px;
     height: 272px;
     background-repeat: no-repeat;
@@ -59,34 +64,30 @@ body {
     justify-content: center;
 }
 
-#palavraSecreta {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    font-size: 1em;
-    margin-top: 70px;  
-}
-
-.letras {
-    width: 40px;
+ 
+#letras {
+   
     text-align: center;
-    border-bottom: 2px solid rgb(6, 22, 1);
-    color: #ffff;
-    margin-left: 5px;
-    margin-right: 5px;
-}
+    color: black;
+    letter-spacing: 5px;
+    font-size: 40px;
+   
+} 
 
-.teclado {
+.teclado{
     margin-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    align-self: center;
+    align-items: center;
+    
+   
+    
 }
 
-.teclas button { 
+.teclas button {
+    
     width: 40px;
     height: 40px;
     margin: 2px;
@@ -95,21 +96,24 @@ body {
     box-shadow: 0px 1px 2px dimgray;
     border: 1px solid dimgray;
     border-radius: 5px;
-    color: grey;
+    color:grey; 
     background-color: white;
     font-size: 25px;
     font-weight: bold;
+    
+    
+    
 }
 
-.teclas button:disabled {
+.teclas button:disabled{
     cursor: not-allowed;
 }
 
-.teclas button:hover {
+.teclas button:hover{
     transform: scale(1.3);
 }
 
-#btnAcao {
+#btnAcao{
     width: 150px;
     height: 40px;
     margin: 2px;
