--- a/logica-de-programacao-l-javascript/atividade-principal-2/css/styles.css
+++ b/logica-de-programacao-l-javascript/atividade-principal-2/css/styles.css
@@ -56,7 +56,7 @@ body{
 
 
 #imagem{
-    background-image: url('../assets/forca.png');
+    background-image: url('../assets/images/forca.png');
     width: 234px;
     height: 272px;
     background-repeat: no-repeat;
