--- a/logica-de-programacao-l-javascript/atividade-principal-2/css/styles.css
+++ b/logica-de-programacao-l-javascript/atividade-principal-2/css/styles.css
@@ -6,19 +6,19 @@
 }
 
 body{
-    width: 100vw;
-    height: 90vw;
+    width: 90vw;
+    height: 40vw;
     margin: 0 auto;
     background-color: beige;
     font-family: 'Ubuntu', sans-serif;
     display: flex;
     flex-direction: row;
     margin: 2vw;
-
+    justify-content: center;
 }
 
 .div1 {
-    width: 75vw;
+    width: 50vw;
     background-color: beige;
     display: flex;
     align-items: center;
@@ -26,7 +26,7 @@ body{
 }
 
 .div2 {
-    width: 25vw;
+    width: 10vw;
     background-color: beige;
     display: flex;
     flex-direction: column;
@@ -80,14 +80,10 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    align-items: center;
-    
-   
-    
+    align-items: center;    
 }
 
-.teclas button {
-    
+.teclas button { 
     width: 40px;
     height: 40px;
     margin: 2px;
@@ -100,13 +96,11 @@ body{
     background-color: white;
     font-size: 25px;
     font-weight: bold;
-    
-    
-    
 }
 
 .teclas button:disabled{
     cursor: not-allowed;
+    background-color: red;
 }
 
 .teclas button:hover{
