--- a/logica-de-programacao-l-javascript/atividade-principal-2/css/styles.css
+++ b/logica-de-programacao-l-javascript/atividade-principal-2/css/styles.css
@@ -9,6 +9,7 @@ body{
     width: 50vw;
     height: 41vw;
     margin: 0 auto;
+    margin-top: 30px;
     background-color: beige;
     font-family: 'Ubuntu', sans-serif;
     display: flex;
