--- a/logica-de-programacao-l-javascript/atividade-principal-2/css/styles.css
+++ b/logica-de-programacao-l-javascript/atividade-principal-2/css/styles.css
@@ -121,3 +121,127 @@ body{
 }
 
 @media screen and (max-width: 968px) {
+
+    *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+    
+    body{
+        width: 10vw;
+        min-width: 10vw;
+        height: 5vw;
+        min-height: 10vw;
+        margin: 0 auto;
+        margin-top: 10px;
+        background-color: beige;
+        font-family: 'Ubuntu', sans-serif;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    
+    .div1 {
+        width: 90px;
+        min-width: 330px;
+        height: 39vw;
+        min-height: 530px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .div2 {
+        width: 20vw;
+        min-width: 111px;
+        height: 28vw;
+        min-height: 430px;
+        display: flex;
+        flex-direction: column;
+        margin-top: 100px;
+    }
+    
+    .categorias {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;   
+    }
+    
+    .placar {
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+    }
+    
+    #titulo, #tituloPlacar, #tituloCat
+    {
+        padding: 14px; 
+    }
+    
+    #imagem{
+        background-image: url('../assets/images/forca.png');
+        width: 234px;
+        height: 272px;
+        background-repeat: no-repeat;
+        margin-top: 25px;
+        justify-content: center;
+    }
+    
+     
+    #letras { 
+        text-align: center;
+        color: black;
+        letter-spacing: 5px;
+        font-size: 30px;
+    } 
+    
+    .teclado{
+        margin-top: 30px;
+        width: 300px;
+        min-width: 200px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .teclas button { 
+        width: 20px;
+        height: 20px;
+        margin: 3px;
+        margin-top: 6px;
+        cursor: pointer;
+        box-shadow: 0px 1px 2px dimgray;
+        border: 1px solid dimgray;
+        border-radius: 5px;
+        color:grey; 
+        background-color: white;
+        font-size: 15px;
+        font-weight: bold;
+    }
+    
+    .teclas button:disabled{
+        cursor: not-allowed;
+        background-color: red;
+    }
+    
+    .teclas button:hover{
+        transform: scale(1.3);
+    }
+    
+    #btnAcao{
+        width: 120px;
+        height: 25px;
+        margin: 1x;
+        margin-top: 5px;
+        cursor: pointer;
+        box-shadow: 0px 1px 2px dimgray;
+        border: 1px solid dimgray;
+        border-radius: 5px;
+        color: grey;
+        background-color: greenyellow;
+        font-size: 'Ubuntu', sans-serif;
+        font-weight: 900;
+    }
+}
