--- a/logica-de-programacao-l-javascript/atividade-principal-2/css/styles.css
+++ b/logica-de-programacao-l-javascript/atividade-principal-2/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    width: 50vw;
+    width: 70vw;
     height: 41vw;
     margin: 0 auto;
     margin-top: 30px;
@@ -19,29 +19,32 @@ body{
 
 .div1 {
     width: 42vw;
-    min-width: 500px;
+    min-width: 600px;
     height: 39vw;
     min-height: 630px;
     display: flex;
     align-items: center;
-    flex-direction: column;    
+    flex-direction: column;   
 }
 
 .div2 {
     width: 18vw;
-    min-width: 120px;
+    min-width: 302px;
     height: 25vw;
     min-height: 530px;
+    margin-top: 65px;
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
+    justify-items: center;
+    text-align: center;
 }
 
 .categorias {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;   
+    flex-direction: column;
+    text-align: left;
 }
 
 .placar {
@@ -50,9 +53,9 @@ body{
     align-items: center; 
 }
 
-#titulo, #tituloPlacar, #tituloCat
+#titulo, #tituloPlacar, #tituloCat, #lblCategoria
 {
-    padding: 25px; 
+    padding: 10px; 
 }
 
 #imagem{
@@ -120,7 +123,7 @@ body{
     font-weight: 900;
 }
 
-@media screen and (max-width: 968px) {
+@media screen and (max-width: 793px) {
 
     *{
         padding: 0;
@@ -137,6 +140,7 @@ body{
         margin-top: 10px;
         background-color: beige;
         font-family: 'Ubuntu', sans-serif;
+        font-size: 11px;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -144,29 +148,33 @@ body{
     
     .div1 {
         width: 90px;
-        min-width: 330px;
+        min-width: 250px;
         height: 39vw;
         min-height: 530px;
         display: flex;
         align-items: center;
         flex-direction: column;
+        text-align: center;
     }
     
     .div2 {
         width: 20vw;
-        min-width: 111px;
+        min-width: 98px;
         height: 28vw;
         min-height: 430px;
+        margin-top: 65px;
         display: flex;
         flex-direction: column;
-        margin-top: 100px;
+        justify-items: center;
+        text-align: center;
     }
     
     .categorias {
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: column;   
+        flex-direction: column;
+        text-align: left; 
     }
     
     .placar {
@@ -175,9 +183,9 @@ body{
         align-items: center; 
     }
     
-    #titulo, #tituloPlacar, #tituloCat
+    #titulo, #tituloPlacar, #tituloCat, #lblCategoria
     {
-        padding: 14px; 
+        padding: 1px; 
     }
     
     #imagem{
@@ -207,17 +215,17 @@ body{
     }
     
     .teclas button { 
-        width: 20px;
-        height: 20px;
-        margin: 3px;
-        margin-top: 6px;
+        width: 18px;
+        height: 18px;
+        margin: 1.1px;
+        margin-top: 1px;
         cursor: pointer;
         box-shadow: 0px 1px 2px dimgray;
         border: 1px solid dimgray;
-        border-radius: 5px;
+        border-radius: 3px;
         color:grey; 
         background-color: white;
-        font-size: 15px;
+        font-size: 13px;
         font-weight: bold;
     }
     
@@ -231,8 +239,8 @@ body{
     }
     
     #btnAcao{
-        width: 120px;
-        height: 25px;
+        width: 90px;
+        height: 20px;
         margin: 1x;
         margin-top: 5px;
         cursor: pointer;
@@ -242,6 +250,6 @@ body{
         color: grey;
         background-color: greenyellow;
         font-size: 'Ubuntu', sans-serif;
-        font-weight: 900;
+        font-weight: 100;
     }
 }
